# life

./: CMakeLists.txt  compiler.cmake  libraries.cmake  life.cpp  readme.md
console/: console.hpp  console_draw.hpp  console_initialise.hpp  console_mouse.hpp  console_render.hpp
display/: display.hpp  display_mouse.hpp
grid/: grid.hpp
